Skip some targets for nvhpc builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         include:
           # Add a single nvhpc build configuration
           - arch: github/ubuntu/nvhpc/21.9
-            io_library_flag: ''
+            io_library_flag: ['','--with-serialbox']
             mpi_flag: ''
             prec_flag: ''
             gpu_flag: '--with-gpu'
@@ -71,7 +71,7 @@ jobs:
       - name: Install HDF5 via Apt
         if: contains( matrix.arch, 'gnu' ) && ! contains( matrix.io_library_flag, 'with-serialbox' )
         run: sudo apt-get install libhdf5-dev
-      
+
       - name: Install HDF5 from source
         if: contains( matrix.arch, 'nvhpc' ) && ! contains( matrix.io_library_flag, 'with-serialbox' )
         run: source arch/${{ matrix.arch }}/env.sh && .github/scripts/install-hdf5.sh
