--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ name: build
 on:
   # Triggers the workflow on push events
   push:
-    branches: [ '**' ]
+    branches: [ 'main', 'develop' ]
     tags-ignore: [ '**' ]
 
   # Triggers the workflow on pull request events
