--- a/benchmark/cloudsc.yml
+++ b/benchmark/cloudsc.yml
@@ -1,8 +1,4 @@
 include-path:
-#  - path: arch/hpc2020/gnu/9.3.0
-#    tag: hpc2020-gnu-9.3.0
-#  - path: arch/hpc2020/intel/2021.4.0
-#    tag: hpc2020-intel-2021.4.0
   - path: include
 
 # Global parameter set
@@ -15,9 +11,11 @@ fileset: !include include_fileset_substituteset.yml:["fileset"]
 substituteset: !include include_fileset_substituteset.yml:["substituteset"]
 
 benchmark:
+  ###############################################
   - name: cpu
     outpath: rundir_cpu
-    comment: Run CPU variants of cloudsc
+    comment: Run CPU variants of CLOUDSC
+  ###############################################
 
     # Benchmark parameters
     parameterset:
@@ -28,6 +26,7 @@ benchmark:
     - name: run_set
       init_with: include_run.yml
       parameter:
+      # Available binaries
       - name: target
         mode: python
         _: |
@@ -36,6 +35,57 @@ benchmark:
             {'hdf5': [], 'serialbox': ['dwarf-cloudsc-c']}['$io_library']
           )
 
+    # Benchmark execution steps
+    step: !include include_step.yml:["step"]
+
+    # Parse output and compile results table
+    patternset: !include include_patternset.yml:["patternset"]
+    analyser: !include include_analyser.yml:["analyser"]
+    result: !include include_result.yml:["result"]
+
+  ###############################################
+  - name: gpu
+    outpath: rundir_gpu
+    comment: Run GPU variants of CLOUDSC
+  ###############################################
+
+    # Benchmark parameters
+    parameterset:
+    - name: build_set
+      init_with: include_parameterset.yml
+      parameter:
+      - {name: other_flags, _: "--with-gpu"}
+    - name: arch_set
+      init_with: include_arch.yml
+    - name: run_set
+      init_with: include_run.yml
+      parameter:
+      # Available binaries
+      - name: target
+        _: 'dwarf-cloudsc-gpu-claw,dwarf-cloudsc-gpu-omp-scc-hoist,dwarf-cloudsc-gpu-scc,dwarf-cloudsc-gpu-scc-hoist'
+      # Number of MPI ranks to launch (to target multiple GPUs, if available)
+      - name: nproc
+        type: int
+        mode: python
+        _: "','.join(str(i+1) for i in range($gpus)) if $mpi == 1 else '1'"
+      # MPI launch command to use (inject CUDA_VISIBLE_DEVICES)
+      - name: launch_cmd
+        mode: python
+        _: "'mpirun -np $nproc bash -c \"CUDA_VISIBLE_DEVICES=\\${OMPI_COMM_WORLD_RANK}' if $mpi == 1 else ''"
+      - name: launch_cmd_end
+        mode: python
+        _: "'\"' if $mpi == 1 else ''"
+      # Increase NPROMA value for GPU variants
+      - name: nproma
+        mode: python
+        type: int
+        _: >
+          {
+            'dwarf-cloudsc-gpu-claw': 8192,
+            'dwarf-cloudsc-gpu-scc': 128,
+            'dwarf-cloudsc-gpu-scc-hoist': 128,
+            'dwarf-cloudsc-gpu-omp-scc-hoist': 128,
+          }['$target']
 
     # Benchmark execution steps
     step: !include include_step.yml:["step"]
