--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *~
+.vscode
 ecbundle
 ecbundle/*
 build/*
@@ -6,7 +7,8 @@ source/*
 serialbox2hdf5/venv
 serialbox2hdf5/serialbox
 benchmark/venv
-benchmark/rundir
+benchmark/rundir_*
+benchmark/jube-debug.log
 venv/
 __pycache__/
 .DS_Store
