Tag for nproma_sweep

--- a/benchmark/arch/hpc2020/nvhpc/22.1/include_arch.yml
+++ b/benchmark/arch/hpc2020/nvhpc/22.1/include_arch.yml
@@ -21,7 +21,7 @@ parameterset:
       # MPI launch command to use (inject CUDA_VISIBLE_DEVICES)
       - name: launch_cmd
         mode: python
-        _: "'srun -n ${{ NPROC }} bash -c \"CUDA_VISIBLE_DEVICES=\\${SLURM_LOCALID}' if $mpi == 1 else ''"
+        _: "'srun -n ${{ NPROC }} --cpus-per-task=${{ NUMOMP }} bash -c \"CUDA_VISIBLE_DEVICES=\\${SLURM_LOCALID}' if $mpi == 1 else ''"
       - name: launch_cmd_end
         mode: python
         _: "'\"' if $mpi == 1 else ''"
