--- a/benchmark/arch/hpc2020/gnu/9.3.0/include_arch.yml
+++ b/benchmark/arch/hpc2020/gnu/9.3.0/include_arch.yml
@@ -11,3 +11,9 @@ parameterset:
 
       # Number of cores per NUMA domain (e.g., number of cores per CPU)
       - {name: cores_per_numa_domain, type: int, _: 64}
+
+      # MPI launch command to use
+      - name: launch_cmd
+        mode: python
+        _: "'srun -n ${{ NPROC }} --cpus-per-task=${{ NUMOMP }}' if $mpi == 1 else ''"
+      - {name: launch_cmd_end, _: ""}
