--- a/benchmark/include/include_analyser.yml
+++ b/benchmark/include/include_analyser.yml
@@ -3,6 +3,7 @@
 analyser:
   - name: analyse_results
     use: [results_pattern,timing_pattern]
+    reduce: true
     analyse:
       step: run
       file: [stdout,stderr]
