Add support for OpenMP loop bind to parallel and thread

--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -111,6 +111,12 @@ if( HAVE_CLOUDSC_GPU_OMP_SCC_HOIST )
     list( APPEND CLOUDSC_GPU_OMP_SCC_HOIST_DEFINITIONS CLOUDSC_GPU_OMP_SCC_HOIST )
     if( HAVE_OMP_TARGET_LOOP_CONSTRUCT )
         list( APPEND CLOUDSC_GPU_OMP_SCC_HOIST_DEFINITIONS HAVE_OMP_TARGET_LOOP_CONSTRUCT )
+        if( HAVE_OMP_TARGET_LOOP_CONSTRUCT_BIND_PARALLEL )
+            list( APPEND CLOUDSC_GPU_OMP_SCC_HOIST_DEFINITIONS HAVE_OMP_TARGET_LOOP_CONSTRUCT_BIND_PARALLEL )
+        endif()
+        if( HAVE_OMP_TARGET_LOOP_CONSTRUCT_BIND_THREAD )
+            list( APPEND CLOUDSC_GPU_OMP_SCC_HOIST_DEFINITIONS HAVE_OMP_TARGET_LOOP_CONSTRUCT_BIND_THREAD )
+        endif()
     endif()
 
     if( NOT (HAVE_OMP_TARGET_TEAMS_DISTRIBUTE OR HAVE_OMP_TARGET_LOOP_CONSTRUCT) )
