--- a/bundle.yml
+++ b/bundle.yml
@@ -57,6 +57,7 @@ options :
         cmake : >
             ENABLE_CLOUDSC_GPU_CLAW=ON
             ENABLE_CLOUDSC_GPU_SCC=ON
+            ENABLE_CLOUDSC_GPU_SCC_C=ON
             ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
 
