--- a/src/cloudsc_python/setup.cfg
+++ b/src/cloudsc_python/setup.cfg
@@ -28,8 +28,7 @@ include_package_data = True
 python_requires = >= 3.7
 install_requires =
     click
-    dace
-    gt4py @ git+https://github.com/gronerl/gt4py.git@lazy_stencil_sdfg#egg=gt4py
+    gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@master#egg=gt4py
     h5py
     numpy
     pandas
