Move source code in src/.

--- a/src/cloudsc_python/setup.cfg
+++ b/src/cloudsc_python/setup.cfg
@@ -26,6 +26,8 @@ zip_safe = False
 packages = find:
 include_package_data = True
 python_requires = >= 3.7
+package_dir =
+    =src
 install_requires =
     click
     gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@master#egg=gt4py
@@ -34,6 +36,14 @@ install_requires =
     pandas
     sympl @ git+https://github.com/stubbiali/sympl.git@oop#egg=sympl
     xarray
+
+[options.packages.find]
+where = src
+exclude =
+    data
+    drivers
+    scripts
+    tests
 
 ;[tool:pytest]
 ;testpaths = tests
