GPU: [WIP] Hacky way to separate CUDA from non-CUDA builds
We effectively hide the CUDA-specific stuff behind ifdefs and
replicate the common lib; note that this still applies the
-Mcuda flag over all source files, including host, so parameter
setup needs careful host-side marking!

--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -98,7 +98,7 @@ if( HAVE_CLOUDSC_GPU_SCC_C )
 	    cloudsc_gpu_scc_cuf_mod.F90
 	    nlev_mod.F90
         LIBS
-           cloudsc-common-lib
+           cloudsc-common-cuda-lib
         DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_C
     )
 endif()
