GPU-SCC-CUF: Separate CUDA-specific parameters files in common lib
This now cleanly separates the device-side parameters in specific
.cuf.F90 files. Since CMake does not natively detect FUDA-Fortran,
we manually add the CUF-specific build and link flags per file and
target.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -28,7 +28,6 @@ list(APPEND CLOUDSC_COMMON_SOURCES
     module/validate_mod.F90
     module/cloudsc_global_state_mod.F90
     module/cloudsc_mpi_mod.F90
-    ## module/yomcst_initialise.F90
 )
 
 list(APPEND CLOUDSC_CUDA_SOURCES
@@ -39,18 +38,22 @@ list(APPEND CLOUDSC_CUDA_SOURCES
     module/yoecldp.cuf.F90
 )
 
-# Compile CUDA fortran files with -MCuda.
-cloudsc_add_compile_options(
-    SOURCES
-        module/fccld_mod.F90
-        module/fcttre_mod.F90
-        module/yoethf.F90
-        module/yomcst.F90
-        module/yoecldp.F90
-        ${CLOUDSC_COMMON_SOURCES}
-        ${CLOUDSC_CUDA_SOURCES}
-    FLAGS "-Mcuda=maxregcount:128"
-)
+# if( HAVE_CUDA )
+    # ========================================================================
+    # Compile CUDA fortran files with -MCuda.
+    #
+    # This is necessary since CMake's CUDA languages does not natively
+    # understand CUDA-Fortran (.cuf) yet. So we simply emulate .cuf with
+    # .cuf.F90 files and force the compile flags here.
+    # ========================================================================
+    cloudsc_add_compile_options(
+        SOURCES ${CLOUDSC_CUDA_SOURCES}
+        FLAGS "-Mcuda=maxregcount:128"
+    )
+
+    # Add CUDA-specific flags to the library if enabled
+    list(APPEND CLOUDSC_COMMON_SOURCES ${CLOUDSC_CUDA_SOURCES} )
+# endif()
 
 
 if( HAVE_ACC )
@@ -85,29 +88,3 @@ ecbuild_add_library( TARGET cloudsc-common-lib
         $<${HAVE_HDF5}:hdf5::hdf5_fortran>
         $<${HAVE_SERIALBOX}:Serialbox::Serialbox_Fortran>
 )
-
-ecbuild_add_library( TARGET cloudsc-common-cuda-lib
-    TYPE ${LIBRARY_TYPE}
-    DEFINITIONS ${CLOUDSC_DEFINITIONS} HAVE_CUDA
-    SOURCES
-        ${CLOUDSC_COMMON_SOURCES}
-	${CLOUDSC_CUDA_SOURCES}
-        $<${HAVE_MPI}:module/cloudsc_mpif.F90>
-        $<${HAVE_HDF5}:module/hdf5_file_mod.F90>
-    PRIVATE_INCLUDES
-        $<${HAVE_HDF5}:${HDF5_Fortran_INCLUDE_DIRS}>
-    PUBLIC_INCLUDES
-        $<INSTALL_INTERFACE:include>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/module>
-    PUBLIC_LIBS
-        $<${HAVE_ACC}:OpenACC::OpenACC_Fortran>
-        $<${HAVE_OMP}:OpenMP::OpenMP_Fortran>
-        $<${HAVE_MPI}:MPI::MPI_Fortran>
-        $<${HAVE_HDF5}:hdf5::hdf5_fortran>
-        $<${HAVE_SERIALBOX}:Serialbox::Serialbox_Fortran>
-)
-# set_property(TARGET cloudsc-common-cuda-lib PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON)
-# set_property(TARGET cloudsc-common-cuda-lib PROPERTY CUDA_SEPARABLE_COMPILATION ON)
-
-target_link_options(cloudsc-common-cuda-lib PUBLIC "-Mcuda")
