--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -88,7 +88,6 @@ if( HAVE_CLOUDSC_GPU_SCC_C )
     # Compile CUDA fortran files with -MCuda. 
     cloudsc_add_compile_options(
         SOURCES cloudsc_gpu_scc_cuf_mod.F90  cloudsc_driver_gpu_scc_cuf_mod.F90
-	        nlev_mod.F90 dwarf_cloudsc_gpu.F90
         FLAGS   "-Mcuda=maxregcount:128")
 
     ecbuild_add_executable(
@@ -99,11 +98,13 @@ if( HAVE_CLOUDSC_GPU_SCC_C )
 	    cloudsc_gpu_scc_cuf_mod.F90
 	    nlev_mod.F90
         LIBS
-           cloudsc-common-cuda-lib
+            cloudsc-common-lib
         DEFINITIONS ${CLOUDSC_DEFINITIONS} CLOUDSC_GPU_SCC_C
     )
 
-    target_link_options(dwarf-cloudsc-gpu-scc-c PUBLIC "-Mcuda")
+    # Small hack around the fact that CMake does not understand
+    # CUDA-Fortran natively yet. So we simply force linking here.
+    target_link_options(dwarf-cloudsc-gpu-scc-cuf PUBLIC "-Mcuda")
 endif()
 
 
