--- a/bundle.yml
+++ b/bundle.yml
@@ -57,9 +57,14 @@ options :
         cmake : >
             ENABLE_CLOUDSC_GPU_CLAW=ON
             ENABLE_CLOUDSC_GPU_SCC=ON
-            ENABLE_CLOUDSC_GPU_SCC_C=ON
             ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
+
+    - with-cuda :
+        help  : Enable GPU kernel variant based on CUDA-Fortran
+        cmake : >
+            ENABLE_CUDA=ON
+            ENABLE_CLOUDSC_GPU_SCC_CUF=ON
 
     - with-mpi :
         help  : Enable MPI-parallel kernel
